--- a/src/components/Clock/style.scss
+++ b/src/components/Clock/style.scss
@@ -1,14 +1,9 @@
-.color-box {
-  $box-size: 200px;
-  display: inline-block;
-  width: $box-size;
-  height: $box-size;
-  border-radius: 8px;
-  transition: all .35s ease-in-out 0s;
-  cursor: pointer;
-  h1 {
-    display: flex;
-    justify-content: center;
-    align-content: center;
+.clock {
+  p {
+    font-size: 24px;
+    border: 1px solid #000000;
+    display: inline;
+    padding: 10px;
+    margin-left: 20px;
   }
 }
